# xethhung12_minio_upload_file

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt
src/xethhung12_minio_upload_file/: __init__.py  __main__.py  file_upload.py  upload_file.py
